Bug 848611 - MathAlgorithms.h:116: error: 'fabsl' was not declared in this scope